# jvc-projector

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
hubitat/: jvc-projector-http.groovy
jvc_projector/: __init__.py  __main__.py  constants.py  exceptions.py  internal_types.py  pkg_logging.py
jvc_projector/client/: __init__.py  client.py  client_config.py  client_impl.py  client_transport.py  client_transport_transaction.py  connector.py  general_connector.py  reconnect_client_transport copy.py  reconnect_client_transport.py  resolve_host.py  simple.py  tcp_client_transport.py  tcp_connector.py
jvc_projector/emulator/: __init__.py  emulator_impl.py  session.py
jvc_projector/protocol/: __init__.py  command.py  command_codes.py  command_meta.py  constants.py  handshake.py  packet.py  proj.py  response.py  transport.py
jvc_projector/rest_server/: __init__.py  __main__.py  api.py  app.py  logger.py
scripts/: command_name_map.json  import_ir_remote_codes.py
