[tool.poetry]
name = "jvc-projector"
version = "0.0.0"
description = "Client library to control JVC projectors over TCP/IP"
authors = [ "Sam McKelvie <dev@mckelvie.org>" ]
license = "MIT"
keywords = [ "JVC", "projector", "automation", "theater", "home", "protocol", "video", "Ethernet", "TCP", "SDDP" ]
readme = "README.md"
homepage = "https://github.com/sammck/jvc-projector"
repository = "https://github.com/sammck/jvc-projector.git"


[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.7.1"
sddp-discovery-protocol = "^1.5.0"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
#dunamai = "^1.9.0"
python-semantic-release = "^7.25.2"
types-requests = "^2.31.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jvc-projector = 'jvc_projector.__main__:run'
jvc-projector-rest-server = 'jvc_projector.rest_server.__main__:run'

[tool.semantic_release]
version_variable = 'jvc_projector/version.py:__version__'
version_toml = 'pyproject.toml:tool.poetry.version'
branch = 'main'
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.mypy]
exclude = [
    '^trash/.*$',
    '^jvc_projector/protocol/proj.py$',
]
